squashes some bugs with voting on reviews from all reviews view, adds a nav button to return to all reviews from single review

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -6,4 +6,6 @@ header {
     align-items: center;
     justify-content: center;
     color: #F5F4F5;
+    font-weight: bold;
+    font-size: 1.3em;
   }
